# cudaimageprocessor

./: CMakeLists.txt  README.md  convert_gray.cu  main.cu
